logs/watchdog_20251012_1500.log
[12/10/2025 15:00:01,70] START WATCHDOG 
  File "C:\AUTOMAZIONE\odin_watchdog_mt5.py", line 192
    elif step >= 3:
    ^^^^
SyntaxError: invalid syntax
[12/10/2025 15:00:02,05] END WATCHDOG 
